Slimmed down docker image from ~570MB to ~180MB